--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="form-group input-group mt-3">
       <input type="text" id="new-todo-item" class="form-control new-todo-item" name="todo" />
       <div class="input-group-append">
-      <button type="submit" id="add-todo-item" class="btn add-todo-item" value="add the todo">+</button>
+      <button type="submit" id="add-todo-item" class="btn add-todo-item" value="add the todo"></button>
       </div>
     </div>
       <ul id="todo-list" class="sortable todo-list"></ul>
